--- a/jade/index.jade
+++ b/jade/index.jade
@@ -72,6 +72,11 @@ html
 								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Сахалин, Железнодорожная ул., 166Б, помещение ресторана Fingerbar
 								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
+						.main-games-unit.main-games-unit_disabled(data-city="Тюмень")
+							.main-games-unit-date 27
+							.main-games-unit-info
+								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Тюмень, ул. 50 лет Октября, 8Б, Деловой дом «Петр Столыпин», помещение ресторана «Максимилианс»
+								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 
 				.main-info
 						.main-info-unit
