--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,12 @@ pre {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'GraublauSans-Semibold';
+  src: url("../fonts/GraublauSans-Semibold.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal; }
+
 /*	-------------------------------------------------
 	Basic styles
 	------------------------------------------------- */
@@ -1037,6 +1043,25 @@ a {
       margin-right: 67px; }
       .main-games-unit:nth-child(3n) {
         margin-right: 0; }
+      .main-games-unit-list {
+        cursor: pointer;
+        font-size: 20px;
+        font-family: 'GraublauSans-Semibold';
+        position: absolute;
+        left: 50%;
+        top: 15px;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+        color: #2B2A29;
+        z-index: 1;
+        padding-left: 30px;
+        white-space: nowrap; }
+        .main-games-unit-list:before {
+          content: url(../images/icon-list.svg);
+          position: absolute;
+          top: 3px;
+          left: 0; }
       .main-games-unit-date {
         font-family: 'GraublauSlab-HeavyItalic';
         text-align: center;
@@ -1245,6 +1270,88 @@ a {
       margin-bottom: 40px; }
       .popup_rules .popup-text p {
         margin-bottom: 20px; }
+  .popup_list {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(0, 0, 0, 0.9); }
+    .popup_list .popup-wrap {
+      max-width: 100vw;
+      padding: 80px 0;
+      max-height: 100vh;
+      overflow: auto;
+      width: 596px; }
+    .popup_list-header {
+      margin-bottom: 20px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .popup_list-header-title {
+        font-size: 30px;
+        line-height: 31px;
+        font-family: 'GraublauSlab-Heavy'; }
+      .popup_list-header-controls {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        .popup_list-header-controls-join {
+          height: 54px;
+          padding: 0 25px;
+          line-height: 54px; }
+        .popup_list-header-controls-close {
+          position: static;
+          margin-left: 17px;
+          cursor: pointer;
+          -webkit-box-shadow: 0px 10px 15px rgba(255, 208, 153, 0.2);
+          box-shadow: 0px 10px 15px rgba(255, 208, 153, 0.2);
+          width: 50px;
+          height: 50px;
+          border-radius: 100%;
+          background-color: #FF8A35;
+          background-image: url(../images/icon-close.svg);
+          background-repeat: no-repeat;
+          background-position: center center; }
+    .popup_list-table {
+      max-width: calc(100vw - 20px);
+      width: 350px;
+      margin: 0 auto; }
+      .popup_list-table tr td {
+        font-size: 25px;
+        font-family: "GraublauSansDisplay-Regular";
+        line-height: 39px; }
+        .popup_list-table tr td:first-child {
+          padding-left: 11px; }
+          .popup_list-table tr td:first-child:not(.popup_list-table-subtitle) {
+            width: 58px; }
+        .popup_list-table tr td.popup_list-table-subtitle {
+          padding-top: 40px;
+          font-family: "GraublauSlab-Heavy";
+          font-size: 24px;
+          line-height: 24px;
+          padding-bottom: 10px; }
+      .popup_list-table tr:first-child td img {
+        vertical-align: middle; }
+      .popup_list-table tr:first-child td:nth-child(1) {
+        position: relative; }
+        .popup_list-table tr:first-child td:nth-child(1):before {
+          position: absolute;
+          content: "";
+          height: 1px;
+          bottom: -1px;
+          left: 0;
+          width: calc(100% - 12px);
+          background-color: rgba(255, 255, 255, 0.8); }
+      .popup_list-table tr:first-child td:nth-child(2) {
+        font-size: 20px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.8); }
 
 .test {
   min-height: 100vh;
