--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,12 @@
 	font-weight:normal;
 	font-style:normal;
 }
+@font-face {
+	font-family:'GraublauSans-Semibold';
+	src:url('../fonts/GraublauSans-Semibold.otf') format("opentype");;
+	font-weight:normal;
+	font-style:normal;
+}
 //Variables
 
 
@@ -360,6 +366,25 @@ input[type=submit], input[type=button] {
 			&:nth-child(3n){
 				margin-right: 0;
 			}
+			&-list{
+				cursor: pointer;
+				font-size: 20px;
+				font-family:'GraublauSans-Semibold';
+				position: absolute;
+				left:50%;
+				top:15px;
+				transform:translateX(-50%);
+				color:#2B2A29;
+				z-index: 1;
+				padding-left: 30px;
+				white-space: nowrap;
+				&:before{
+					content:url(../images/icon-list.svg);
+					position: absolute;
+					top:3px;
+					left:0;
+				}
+			}
 			&-date{
 				font-family:'GraublauSlab-HeavyItalic';
 				text-align: center;
@@ -590,6 +615,105 @@ input[type=submit], input[type=button] {
 				margin-bottom: 40px;
 				p{
 					margin-bottom: 20px;
+				}
+			}
+		}
+	}
+	&_list{
+
+		backdrop-filter: blur(10px);
+		background-color:rgba(0, 0, 0, 0.9);
+		.popup-wrap{
+			max-width: 100vw;
+			padding:80px 0;
+			max-height: 100vh;
+			overflow:auto;
+			width:596px;
+		}
+		&-header{
+			margin-bottom: 20px;
+			display: flex;
+			justify-content:space-between;
+			align-items:center;
+			&-title{
+				font-size:30px;
+				line-height: 31px;
+				font-family:'GraublauSlab-Heavy';
+			}
+			&-controls{
+				display: flex;
+				align-items:center;
+				&-join{
+					
+					height:54px;
+					padding:0 25px;
+					line-height: 54px;
+				}
+				&-close{
+					position: static;
+					margin-left: 17px;
+					cursor: pointer;
+					box-shadow: 0px 10px 15px rgba(255, 208, 153, 0.2);
+					width:50px;
+					height:50px;
+					border-radius: 100%;
+					background-color: $orange;
+					background-image: url(../images/icon-close.svg);
+					background-repeat: no-repeat;
+					background-position: center center;
+				}
+			}
+		}
+		&-table{
+			max-width: calc(100vw - 20px);
+			width: 350px;
+			margin:0 auto;
+			tr{
+				td{
+					font-size: 25px;
+							
+					font-family: "GraublauSansDisplay-Regular";
+					line-height: 39px;
+					&:first-child{
+						padding-left: 11px;
+						&:not(.popup_list-table-subtitle){
+							width:58px;
+							
+						}
+					}
+
+					&.popup_list-table-subtitle{
+						padding-top: 40px;
+						font-family: "GraublauSlab-Heavy";
+						font-size: 24px;
+						line-height: 24px;
+						padding-bottom: 10px;
+					}
+				}
+				&:first-child{
+					td{
+						
+						
+						img{
+							vertical-align: middle;
+						}
+						&:nth-child(1){
+							position: relative;
+							&:before{
+								position: absolute;
+								content:"";
+								height:1px;
+								bottom:-1px;
+								left:0;
+								width:calc(100% - 12px);
+								background-color: rgba(255,255,255,.8);
+							}
+						}
+						&:nth-child(2){
+							font-size: 20px;
+							border-bottom:1px solid rgba(255,255,255,.8);
+						}
+					}
 				}
 			}
 		}
