--- a/jade/index.jade
+++ b/jade/index.jade
@@ -57,26 +57,21 @@ html
 						.main-games-unit.main-games-unit_disabled(data-city="Нефтеюганск")
 							.main-games-unit-date 1
 							.main-games-unit-info
-								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Нефтеюганск, Сургутская ул., 1/23, помещение РК «Империя»
+								.main-games-unit-info-unit.main-games-unit-info-unit_place Нефтеюганск
 								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Ноябрьск")
 							.main-games-unit-date 8
 							.main-games-unit-info
-								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Ноябрьск, ул.Холмогорская, 17, помещение ресторана «Мечта»
+								.main-games-unit-info-unit.main-games-unit-info-unit_place Ноябрьск
 								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
 						.main-games-unit.main-games-unit_disabled(data-city="Сахалин")
 							.main-games-unit-date 8
 							.main-games-unit-info
-								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Сахалин, Железнодорожная ул., 166Б, помещение ресторана Fingerbar
+								.main-games-unit-info-unit.main-games-unit-info-unit_place Сахалин
 								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 							.main-games-unit-button.button.button_orange.register Участвовать
-						.main-games-unit.main-games-unit_disabled(data-city="Тюмень")
-							.main-games-unit-date 27
-							.main-games-unit-info
-								.main-games-unit-info-unit.main-games-unit-info-unit_place.game-with-adress Тюмень, ул. 50 лет Октября, 8Б, Деловой дом «Петр Столыпин», помещение ресторана «Максимилианс»
-								.main-games-unit-info-unit.main-games-unit-info-unit_time 18:00
 
 				.main-info
 						.main-info-unit
@@ -107,3 +102,4 @@ html
 		.popup.popup_finish
 			.popup-wrap
 				.popup-title Спасибо за регистрацию!
+				
